--- a/css/index.css
+++ b/css/index.css
@@ -1,11 +1,14 @@
 @import url(../css/awsome.css);
-@import url(../css/pricing.css);
 * {
   padding: 0;
   text-decoration: none;
   list-style: none;
   margin: 0;
   box-sizing: border-box;
+}
+.awsome {
+  width: 100%;
+  padding: 80px 0;
 }
 .container {
   margin: auto;
