--- a/css/index.css
+++ b/css/index.css
@@ -1,11 +1,15 @@
 @import url(../css/awsome.css);
 @import url(../css/pricing.css);
+@import url(../css/style.css);
 * {
   padding: 0;
   text-decoration: none;
   list-style: none;
   margin: 0;
   box-sizing: border-box;
+}
+html {
+  font-family: "Open Sans", "Raleway";
 }
 .container {
   margin: auto;
@@ -18,7 +22,9 @@
   text-align: center;
   text-transform: uppercase;
   color: #212121;
-  /* font-size: 36px; */
+  font-family: "Raleway";
+  font-size: 36px;
+  font-weight: 400;
 }
 .line {
   height: 2px;
@@ -27,10 +33,10 @@
   margin: 0 auto 34px;
 }
 .text {
-  margin-bottom: 68px;
   text-align: center;
   color: #86878b;
   font-size: 14px;
+  font-weight: 400;
   width: 363px;
   margin: 0 auto 68px;
 }
