--- a/css/pricing.css
+++ b/css/pricing.css
@@ -24,7 +24,7 @@
   color: #ffffff;
   border-bottom: 2px solid #f5f5f5;
 }
-.list__item--coast {
+.list__item--cost {
   background-color: #333333;
   width: 100%;
   text-align: center;
