--- a/css/awsome.css
+++ b/css/awsome.css
@@ -5,7 +5,7 @@
   display: flex;
   justify-content: space-evenly;
   flex-wrap: wrap;
-  margin: 0 --15px 0;
+  margin: 0 -15px;
 }
 .card {
   width: 350px;
