--- a/css/index.css
+++ b/css/index.css
@@ -2,6 +2,7 @@
 @import url(../css/pricing.css);
 @import url(../css/style.css);
 @import url(../css/reviews.css);
+@import url(../css/axure.css);
 * {
   padding: 0;
   text-decoration: none;
@@ -16,9 +17,11 @@ html {
   margin: auto;
   max-width: 1170px;
   padding: 0 15px;
+  position: relative;
+  z-index: 5;
 }
 .title {
-  margin: 0 auto 34px;
+  /* margin: 0 auto 34px; */
   text-align: center;
   text-transform: uppercase;
   color: #212121;
@@ -26,17 +29,18 @@ html {
   font-size: 36px;
   font-weight: 400;
 }
-.line {
-  height: 2px;
+.title::after {
+  content: "";
   width: 64px;
+  height: 2px;
   background-color: #e72424;
-  margin: 0 auto 34px;
+  display: block;
+  margin: 34px auto 36px;
 }
 .text {
   text-align: center;
   color: #86878b;
   font-size: 14px;
   font-weight: 400;
-  width: 363px;
   margin: 0 auto 68px;
 }
