--- a/css/reviews.css
+++ b/css/reviews.css
@@ -3,8 +3,66 @@
   width: 100%;
 }
 .wrap__reviews {
-  /* display: flex;
-  justify-content: space-evenly;
+  display: flex;
+  justify-content: space-between;
   flex-wrap: wrap;
-  margin: 0 -15px; */
+  margin: 0 -15px;
+}
+.reviews__card {
+  width: 298px;
+  margin: 0 15px;
+}
+.reviews__text p {
+  background-color: #e2e2e2;
+  border-radius: 7px;
+  width: 298px;
+  padding: 20px 8px;
+  margin: auto;
+  line-height: 19px;
+  /* align-items: center; */
+  text-align: center;
+  font-size: 14px;
+  font-weight: 400;
+  color: #86878b;
+  margin-bottom: 28px;
+}
+.reviews__description {
+  display: flex;
+  justify-content: space-evenly;
+}
+.reviews__img {
+  width: 70px;
+  height: 70px;
+  margin: left;
+  overflow: hidden;
+  border-radius: 50%;
+}
+.reviews__img img {
+  width: 100%;
+  height: 100%;
+  object-position: center;
+  object-fit: cover;
+}
+.descriptoin {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+}
+.name {
+  width: 97px;
+  text-transform: capitalize;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 27px;
+  text-align: center;
+  align-items: center;
+}
+.profession {
+  width: 59px;
+  text-transform: lowercase;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 19px;
+  text-align: center;
+  align-items: center;
 }
