--- a/css/reviews.css
+++ b/css/reviews.css
@@ -13,10 +13,7 @@
   margin: 0 15px;
 }
 .reviews__text {
-  margin-bottom: 28px;
-}
-.reviews__text p {
-  align-items: center;
+  width: 298px;
   background-color: #e2e2e2;
   border-radius: 7px;
   padding: 8px 20px;
@@ -29,27 +26,22 @@
   transition: 1s;
   cursor: pointer;
   position: relative;
-  top: 0;
-  left: 0;
-}
-.reviews__text p:hover {
-  background-color: gray;
-  color: azure;
+  /* top: 0;
+  left: 0; */
+  margin-bottom: 28px;
 }
 .reviews__text::after {
   content: "";
   width: 0;
   height: 0;
-  border-left: 15px solid transparent;
-  border-right: 15px solid transparent;
-  border-top: 20px solid #e2e2e2;
+  border: 10px solid transparent;
+  border-top: 10px solid #e2e2e2;
   position: absolute;
-  margin-left: 40px;
+  top: 100%;
+  left: 45px;
   cursor: pointer;
+  display: inline-block;
 }
-/* .reviews__text::after:hover {
-  background-color: gray;
-} */
 .reviews__description {
   display: flex;
   justify-content: space-around;
@@ -60,14 +52,6 @@
   margin: left;
   overflow: hidden;
   border-radius: 50%;
-  transition: 1s;
-}
-.reviews__img:hover {
-  width: 80px;
-  height: 80px;
-  transition: 1.5s;
-  border: 5px solid skyblue;
-  border-radius: 50px;
 }
 .reviews__img img {
   width: 100%;
@@ -97,4 +81,5 @@
   line-height: 19px;
   text-align: center;
   align-items: center;
+  text-transform: capitalize;
 }
