--- a/css/pricing.css
+++ b/css/pricing.css
@@ -14,7 +14,7 @@
   margin: 0 15px 0;
 }
 .list__item--tarif {
-  background-color: #333333;
+  background-color: #2c2b2b;
   width: 100%;
   text-align: center;
   font-size: 20px;
