--- a/css/index.css
+++ b/css/index.css
@@ -1,11 +1,8 @@
 @import url(../css/awsome.css);
-<<<<<<< HEAD
-=======
 @import url(../css/pricing.css);
 @import url(../css/style.css);
 @import url(../css/reviews.css);
 @import url(../css/axure.css);
->>>>>>> axure
 * {
   padding: 0;
   text-decoration: none;
@@ -15,7 +12,8 @@
 }
 .awsome {
   width: 100%;
-  padding: 80px 0;}
+  padding: 80px 0;
+}
 html {
   font-family: "Open Sans", "Raleway";
 }
