--- a/css/index.css
+++ b/css/index.css
@@ -5,8 +5,11 @@
 @import url(../css/axure.css);
 @import url(../css/header.css);
 @import url(../css/media.css);
-@import url(../css/cdnjs.css);
 @import url(../css/footer.css);
+@import url(../css/cdnjs.css);
+@import url(../css/axit.css);
+@import url(../css/contact.css);
+
 * {
   padding: 0;
   text-decoration: none;
