--- a/css/media.css
+++ b/css/media.css
@@ -11,6 +11,7 @@
 }
 .media__wrap__title {
   margin: 0 15px;
+  width: 365px;
 }
 .media__title {
   font-family: "Open Sans";
@@ -23,7 +24,6 @@
   color: rgba(51, 51, 51, 1);
 }
 .media__text {
-  width: 365px;
   font-family: "Open Sans";
   font-style: normal;
   font-weight: 400;
@@ -42,55 +42,51 @@
   font-size: 40px;
   justify-content: space-evenly;
   align-items: center;
-  margin: 0 -15px;
   display: flex;
   flex-wrap: wrap;
 }
-.media__icons li {
-  margin: 0 15px;
-}
-.fa-facebook-f {
+.media-facebook {
   color: #757373;
   transition: 2s;
 }
-.fa-facebook-f:hover {
+.media-facebook:hover {
   color: #3b6dd9;
   text-shadow: 13px 13px 10px #000000a2;
   transform: scale(1.2);
   transform: translate(11%, 11%);
 }
-.fa-twitter {
+.media-twitter {
   color: #757373;
   transition: 2s;
 }
-.fa-twitter:hover {
+.media-twitter:hover {
   color: #00acee;
   transform: scale(1.2);
   text-shadow: 15px 15px 10px #000000a2;
 }
-.fa-google-plus-g {
+.media-google {
   color: #757373;
   transition: 2s;
 }
-.fa-google-plus-g:hover {
+.media-google:hover {
   color: #d41818e6;
   text-shadow: 15px 15px 10px #000000a2;
   transform: rotate(20deg);
 }
-.fa-instagram {
+.media-instagram {
   color: #757373;
   transition: 2s;
 }
-.fa-instagram:hover {
+.media-instagram:hover {
   color: #7c144dad;
   transform: scale(1.2);
   text-shadow: 15px 15px 10px #000000a2;
 }
-.fa-rss {
+.media-rss {
   color: #757373;
   transition: 2s;
 }
-.fa-rss:hover {
+.media-rss:hover {
   color: orange;
   transform: scale(1.2);
   text-shadow: 15px 15px 10px #000000a2;
