--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,1 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,200;1,100;1,200&family=Open+Sans:wght@400;600;700&family=Raleway&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,200;1,100;1,200&family=Open+Sans:wght@400;600;700&family=Raleway&family=Roboto:ital,wght@0,400;0,500;1,400&display=swap");
