--- a/css/index.css
+++ b/css/index.css
@@ -9,6 +9,7 @@
 @import url(../css/cdnjs.css);
 @import url(../css/axit.css);
 @import url(../css/contact.css);
+@import url(../css/tabs.css);
 
 * {
   padding: 0;
