--- a/css/axure.css
+++ b/css/axure.css
@@ -60,26 +60,12 @@
   color: #ffffff;
   font-size: 15px;
   font-weight: 600;
-  transition: 1s;
+  transition: 0.5s;
 }
 .btn:hover {
-  background-image: radial-gradient(
-    circle at -19.64% 62.28%,
-    #e7f189 0,
-    #eae77a 10%,
-    #eddc6b 20%,
-    #efd05b 30%,
-    #f1c34c 40%,
-    #f2b53c 50%,
-    #f3a62e 60%,
-    #f59723 70%,
-    #f7881e 80%,
-    #f9791d 90%,
-    #fc6921 100%
-  );
+  background-color: white;
   color: black;
-  border: 1px solid rgb(83, 21, 21);
-  border-radius: 10%;
-  padding: 14px 24px;
-  font-size: 17px;
+  color: black;
+  border: 1px solid black;
+  transform: scale(1.1);
 }
