--- a/css/contact.css
+++ b/css/contact.css
@@ -8,16 +8,15 @@
 .contactUs__content {
   display: flex;
   justify-content: space-between;
-
   margin-bottom: 80px;
 }
 .left__content {
-  width: 478px;
+  width: 40%;
   margin: 0 15px;
 }
-.content__user__name {
+.content__user {
   margin-bottom: 35px;
-  width: 478px;
+  width: 100%;
 }
 .contact__user__name {
   font-family: "Open Sans";
@@ -27,20 +26,17 @@
   color: rgba(189, 189, 189, 1);
   display: block;
 }
-#contactUserName {
+#contantUserName {
   border: none;
   border-bottom: 1px solid #bdbdbd;
   width: 100%;
   outline: none;
   transition: 1.2s;
+  padding: 4px 4px;
 }
-#contactUserName:hover {
+#contantUserName:hover {
   transform: scale(1.2);
   color: rgba(222, 51, 51, 0.5);
-}
-.content__user__email {
-  margin-bottom: 40px;
-  width: 478px;
 }
 .contact__user__email {
   font-family: "Open Sans";
@@ -56,13 +52,14 @@
   border-bottom: 1px solid #bdbdbd;
   outline: none;
   transition: 1.2s;
+  padding: 4px 4px;
 }
 #contactUserEmail:hover {
   transform: scale(1.2);
   color: rgba(222, 51, 51, 0.5);
 }
-.content__user__password {
-  width: 478px;
+.content__user:last-child {
+  margin-bottom: 0;
 }
 .contact__user__password {
   font-family: "Open Sans";
@@ -78,6 +75,7 @@
   width: 100%;
   transition: 2s;
   outline: none;
+  padding: 4px 4px;
 }
 #contact__user__password:hover {
   transform: scale(1.2);
@@ -85,10 +83,11 @@
 }
 .right__content {
   margin: 0 15px;
+  width: 40%;
 }
 .content__textarea {
-  width: 478px;
   height: 180px;
+  width: 100%;
 }
 .label__textarea {
   display: block;
@@ -107,6 +106,7 @@
   resize: none;
   outline: none;
   transition: 2s;
+  padding: 4px 4px;
 }
 #text__label__textarea:hover {
   transform: scale(1.2);
