--- a/css/media.css
+++ b/css/media.css
@@ -24,6 +24,7 @@
   color: rgba(51, 51, 51, 1);
 }
 .media__text {
+  width: 100%;
   font-family: "Open Sans";
   font-style: normal;
   font-weight: 400;
@@ -47,7 +48,7 @@
 }
 .media-facebook {
   color: #757373;
-  transition: 2s;
+  transition: 0.3s;
 }
 .media-facebook:hover {
   color: #3b6dd9;
@@ -57,7 +58,7 @@
 }
 .media-twitter {
   color: #757373;
-  transition: 2s;
+  transition: 0.3s;
 }
 .media-twitter:hover {
   color: #00acee;
@@ -66,7 +67,7 @@
 }
 .media-google {
   color: #757373;
-  transition: 2s;
+  transition: 0.3s;
 }
 .media-google:hover {
   color: #d41818e6;
@@ -75,7 +76,7 @@
 }
 .media-instagram {
   color: #757373;
-  transition: 2s;
+  transition: 0.3s;
 }
 .media-instagram:hover {
   color: #7c144dad;
@@ -84,7 +85,7 @@
 }
 .media-rss {
   color: #757373;
-  transition: 2s;
+  transition: 0.3s;
 }
 .media-rss:hover {
   color: orange;
