--- a/css/awsome.css
+++ b/css/awsome.css
@@ -8,7 +8,7 @@
   margin: 0 -15px;
 }
 .card {
-  width: 350px;
+  width: 30%;
   margin: 0 15px;
 }
 .card__img {
@@ -43,13 +43,14 @@
   text-align: center;
   font-size: 14px;
   font-weight: 400;
-  width: 350px;
+  width: 100%;
   margin: auto;
   transition: 1s;
   cursor: pointer;
 }
 .card__text p:hover {
   background-color: antiquewhite;
+  transform: scale(1.1);
 }
 .card__text::after span {
   text-transform: lowercase;
