--- a/css/axit.css
+++ b/css/axit.css
@@ -6,6 +6,8 @@
   background-position: center;
   margin: auto;
   width: 100%;
+  display: flex;
+  height: calc(100vh-80px);
   position: relative;
   top: 0;
   left: 0;
@@ -211,4 +213,43 @@ h1::after {
 }
 .axit__button:active {
   background-color: rgb(165, 68, 68);
+}
+@media (max-width: 920px) {
+  .axit__wrap {
+    flex-direction: column;
+    align-content: center;
+  }
+  .ax__it {
+    display: block;
+    margin: auto;
+    text-align: center;
+  }
+  .axit__title {
+    margin: auto;
+    text-align: center;
+  }
+  .axit__title::after {
+    display: block;
+    margin: 42px auto 42px;
+  }
+  .axit__text {
+    margin: 0 auto 42px;
+    text-align: center;
+    font-size: 20px;
+  }
+  .modern__btn {
+    display: block;
+    margin: 0 auto 42px;
+    text-align: center;
+  }
+  .free__wrap__content {
+    display: block;
+    margin: auto;
+    width: 40%;
+  }
+}
+@media (max-width: 745px) {
+  .free__wrap__content {
+    width: 40%;
+  }
 }
