--- a/css/axure.css
+++ b/css/axure.css
@@ -6,6 +6,7 @@
   background-position: center;
   margin: auto;
   position: relative;
+  height: calc(100vh-80px);
 }
 .axure::after {
   content: "";
