--- a/css/header.css
+++ b/css/header.css
@@ -55,3 +55,15 @@
   border-bottom: 2px solid rgba(255, 255, 255, 0.7);
   transform: scale(1.1);
 }
+@media (max-width: 614px) {
+  .header__wrap {
+    display: flex;
+    flex-direction: column;
+  }
+  .logo {
+    margin: 0 auto 20px;
+  }
+  .navigation__list {
+    margin: auto;
+  }
+}
