--- a/css/awsome.css
+++ b/css/awsome.css
@@ -62,3 +62,16 @@
     width: 40%;
   }
 }
+@media (max-width: 460px) {
+  .card {
+    width: 40%;
+  }
+  .card__title {
+    width: 100%;
+    font-size: 16px;
+  }
+  .reviews__img {
+    width: 50px;
+    height: 50px;
+  }
+}
