--- a/css/axit.css
+++ b/css/axit.css
@@ -68,7 +68,7 @@ h1::after {
   display: block;
   margin: 35px 0;
 }
-.axit__text {
+.axit__text p {
   width: 282px;
   color: rgba(255, 255, 255, 0.8);
   font-family: "Raleway";
@@ -233,7 +233,7 @@ h1::after {
     margin: 42px auto 42px;
   }
   .axit__text {
-    margin: 0 auto 42px;
+    /* margin: 0 auto 42px; */
     text-align: center;
     font-size: 20px;
   }
@@ -250,6 +250,18 @@ h1::after {
 }
 @media (max-width: 745px) {
   .free__wrap__content {
-    width: 40%;
+    width: 290px;
+  }
+}
+@media (max-width: 570px) {
+  .axit__modern__wrap {
+    width: 200px;
+    margin: auto;
+  }
+  .axit__text p {
+    text-align: center;
+    margin: 0 auto 30px;
+    font-size: 18px;
+    width: 180px;
   }
 }
